MyDev/src/objects/Expense__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Flight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>